Banner stretching issue was fixed

--- a/remont/static/remont/css/top_page.css
+++ b/remont/static/remont/css/top_page.css
@@ -18,10 +18,10 @@
   display: table-cell;
   border: solid 1px #999;
   height: 90px;
-  width: 34%;
+  width: 70%;
   float: left;
   margin-top: 4px;
-  margin-left: 17%;
+  margin-left: 6%;
 }
 
 .topPage .sectionRegister {
